# django-graphql-framework

./: pyproject.toml  setup.cfg
graphql_framework/: converter.py  decorators.py  fields.py  schema.py  views.py
graphql_framework_test_app/: manage.py  pyproject.toml
graphql_framework_test_app/features/: environment.py  registry.feature
graphql_framework_test_app/features/steps/: models.py  registry.py  serializers.py  types.py
graphql_framework_test_app/graphql_framework_test_app/: __init__.py  apps.py  asgi.py  models.py  schema.py  serializers.py  settings.py  urls.py  wsgi.py
graphql_framework_test_app/graphql_framework_test_app/migrations/: 0001_initial.py  0002_auto_20200810_1438.py  0003_userattribute2.py
