[tool.poetry]
name = "django-graphql-framework"
version = "0.1.0"
description = ""
authors = ["Ellis Percival <flyte@failcode.co.uk>"]
license = "MIT"
packages = [
    { include = "graphql_framework" }
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
