[tool.poetry]
name = "django-graphql-framework"
version = "0.1.0"
description = ""
authors = ["Ellis Percival <flyte@failcode.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
graphql-core = ">=3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
