[tool.poetry]
name = "graphql_framework_test_app"
version = "0.1.0"
description = ""
authors = ["Ellis Percival <flyte@failcode.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.9"
django-graphql-framework = { path = ".." }
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
pylint-django = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
